Remove unused log files, and documentation; update form handling and validation messages; add new Logger utility and MonsterTargetEvent class